force-app/main/default/objects/BMCServiceDesk__Metric_Card__c/BMCServiceDesk__Metric_Card__c.object-meta.xml
<CustomObject>
    <label>Metric Card</label>
    <nameField>
        <label>Card Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metric Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>