force-app/main/default/objects/BMCServiceDesk__Metric_Card__c/fields/BMCServiceDesk__Module__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incident</fullName>
                <default>true</default>
                <label>Incident</label>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Problem</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>Broadcast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>