force-app/main/default/objects/BMCServiceDesk__Metric_Card__c/fields/BMCServiceDesk__Position__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Position__c</fullName>
    <label>Position</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>