force-app/main/default/objects/BMCServiceDesk__Metric_Card__c/fields/BMCServiceDesk__ViewId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ViewId__c</fullName>
    <label>View Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>